<resources>
    <string name="key_update_hqs_in_progress" translatable="false">key_update_hqs_in_progress</string>
    <string name="app_version" translatable="false">0.0.1</string>
    <string name="summary_github" translatable="false">https://github.com/tiagohs/</string>
    <string name="title_github" translatable="false">Github</string>
    <string name="url_github" translatable="false">https://github.com/tiagohs/hqr-comics-reader</string>
    <string name="key_download_directory" translatable="false">key_download_directory</string>
    <string name="key_download_storage_used" translatable="false">key_download_storage_used</string>
    <string name="source_section_title" translatable="false">%1$s - %2$s</string>
    <string name="key_language" translatable="false">key_language</string>
    <string name="source_detail_name" translatable="false">%1$s - %2$s</string>
    <string name="key_download_cache_used" translatable="false">key_download_cache_used</string>
    <string name="key_github" translatable="false">key_github</string>
    <string name="key_category_downloads" translatable="false">key_category_downloads</string>
    <string name="key_default_source" translatable="false">key_current_source</string>
    <string name="key_update_version" translatable="false">key_update_version</string>
    <string name="key_check_update_automatic" translatable="false">key_check_update_automatic</string>

    <string name="app_ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="app_name">HQR</string>
    <string name="nav_home">Home</string>
    <string name="nav_favorite">Favorites</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_download">Download</string>
    <string name="description_movie_poster">Movie Poster</string>
    <string name="read">Read</string>
    <string name="resume">Resume</string>
    <string name="comic_details_wallpaper_description">Comic Wallpaper</string>
    <string name="comic_details_wallpaper_custom_description">%1$s Wallpaper</string>
    <string name="comic_details_poster_description">Comic poster</string>
    <string name="comic_details_poster_custom_description">%1$s poster</string>
    <string name="download_number_of">%1$d Chapters</string>
    <string name="action_settings">Settings</string>
    <string name="settings_activity_title">Settings</string>
    <string name="title_language">Language</string>
    <string name="pref_title_general">General</string>
    <string name="summary_language">Application Language</string>
    <string name="summary_update_hqs_in_progress">Update only when the conditions are met</string>
    <string name="title_update_hqs_in_progress">Update only In progress comics</string>
    <string name="pref_title_downloads">Downloads</string>
    <string name="title_download_directory">Donwloads Folder</string>
    <string name="summary_download_directory">Folder were your downloads will stay</string>
    <string name="title_download_only_wifi">Only download over Wi-Fi</string>
    <string name="download_only_wifi">Only download over Wi-Fi</string>
    <string name="key_download_only_wifi">Only download over Wi-Fi</string>
    <string name="storage_used">Used: %1$s</string>
    <string name="title_download_storage_used">Clear Downloads</string>
    <string name="pref_header_about">About</string>
    <string name="title_version">Version</string>
    <string name="summary_about">HQR is a online comic reader</string>
    <string name="custom_dir">Select Directory</string>
    <string name="dir_name">Name</string>
    <string name="spanish">ES - Spanish</string>
    <string name="sources_activity_title">Select Source</string>
    <string name="other_source">Others</string>
    <string name="all_lang">All</string>
    <string name="download_paused">Download Paused</string>
    <string name="chapter_downloading_progress">Downloading  (%1$d/%2$d)</string>
    <string name="action_resume">Resume</string>
    <string name="action_pause">Pause</string>
    <string name="action_clear">Clear</string>
    <string name="action_retry">Try Again</string>
    <string name="download_in_progress">Download in progress</string>
    <string name="download_complete">Download complete</string>
    <string name="download_error">Download error</string>
    <string name="download_notification_downloader_title">HQR Downloader</string>
    <string name="download_notification_unkown_error">An unexpected error occurred while downloading chapter</string>
    <string name="download_queue_error">An error occurred while downloading chapters. You can try again in the downloads section</string>
    <string name="no_wifi">No wifi connection available</string>
    <string name="no_network">No network connection available</string>
    <string name="completed_status">Completed</string>
    <string name="ongoing_status">In Progress</string>
    <string name="canceled_status">Cancelled</string>
    <string name="unknown_status">Unknown</string>
    <string name="action_procurar">Search</string>
    <string name="filter_dialog_title">Filter</string>
    <string name="action_search">Search</string>
    <string name="nav_recent">Recent</string>
    <string name="nav_more">More</string>
    <string name="channel_downloader">Downloader</string>
    <string name="nav_downloads">Downloads</string>
    <string name="portuguese">BR - Brazil Portuguese</string>
    <string name="english">EN - English</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="action_download">Download</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Select All</string>
    <string name="action_clear_all">Clear All</string>
    <string name="deleting">Deleting chapters &#8230;</string>
    <string name="chapters_selected">Selected: : %1$d</string>
    <string name="chapters_selected_title">Select bellow:</string>
    <string name="nav_librarie">My Librarie</string>
    <string name="action_start">Start</string>
    <string name="download_status">Downloading (%1$d/%2$d)</string>
    <string name="no_downloads_in_queue">You don\'t have any download on queue</string>
    <string name="no_downloads">You don\'t have any downloaded Comic.</string>
    <string name="no_favorites">You don\'t have any favorite comic.</string>
    <string name="no_recent">You don\'t read any comic recently.</string>
    <string name="no_found">Nothing found.</string>
    <string name="search_info">Search your favorite comic here.</string>
    <string name="title_download_cache_used">Clear images cache.</string>
    <string name="item_option">Options</string>
    <string name="acess_website">Access site</string>
    <string name="change_source">Change source</string>
    <string name="lastest_comics_title">" Latest Comics"</string>
    <string name="lastest_comics_subtitle">" Latest Comics on Source"</string>
    <string name="see_all">See All</string>
    <string name="populars_title">Populars Comics</string>
    <string name="populars_subtitle">The most Access Comics on Source</string>
    <string name="chapter_item_book_icon_description">Item icon</string>
    <string name="chapter_item_icon_download_description">Icon from downloaded chapter</string>
    <string name="reader_right_button_description">Next button</string>
    <string name="reader_left_button_description">Previous button</string>
    <string name="item_comic_simple_icon_description">Item icon</string>
    <string name="download_manager_waiting">Waiting in queue &#8230;</string>
    <string name="no_synopse">Synopsys Unavailable</string>
    <string name="download_manager_title">Download Manager</string>
    <string name="home_title">Home</string>
    <string name="lirarie_title">My Librarie</string>
    <string name="recents_title">Recent</string>
    <string name="unknown_error">An error occurred, please try again.</string>
    <string name="clear_storage_content">Are you sure? this will delete all your downloaded comics.</string>
    <string name="clear_cache_storage_content">Are you sure?</string>
    <string name="nav_go_to_site">Open site</string>
    <string name="sucess_language_change">Language changed</string>
    <string name="sucess_storage_clear">Files deleted</string>
    <string name="sucess_cache_clear">Files deleted</string>
    <string name="no_comics">No Comic found</string>
    <string name="authors_title">Writers / Artist</string>
    <string name="scanlators_title">Scanlators</string>
    <string name="persmission_needed_never_ask_content">We need of your permission to download Comic! Go to Settings/ Apps/HQR/Permissions and active storage.</string>
    <string name="persmission_needed_content">We need of your permission to download Comic!</string>
    <string name="tab_info">Information</string>
    <string name="tab_chapter">Chapters</string>
    <string name="tab_favorite">Favorites</string>
    <string name="tab_downloads">Downloads</string>
    <string name="chapter_not_available">This chapter is not yet available. Please back often for updates.</string>
    <string name="comic_not_available">This comic dont have any chapter to read.</string>
    <string name="title_check_update_automatic">Check for updates</string>
    <string name="check_update_automatic">Automatically check for application updates</string>
    <string name="checking_updates">Checking for new Updates&#8230;</string>
    <string name="no_updates">No new updates available</string>
    <string name="updater_notification_download_started">Download in progress..</string>
    <string name="updater_notification_download_finished">Download finished</string>
    <string name="updater_notification_download_error">Error during the download</string>
    <string name="action_install">Install</string>
    <string name="action_cancel">Clear</string>
    <string name="updater_notification_download_available">New Update Available!</string>
    <string name="auto_updates_key">auto_updates_key</string>
    <string name="auto_updates_title">Check for updates</string>
    <string name="auto_updates_summary">Check automatically for updates</string>
    <string name="check_new_update_avalible">New Update Available!</string>
    <string name="download">Download</string>
    <string name="ignore">Ignore</string>

    <string-array name="pref_languages_keys">
        <item>en</item>
        <item>pt-BR</item>
    </string-array>

    <plurals name="confirm_delete_chapters">
        <item quantity="one">Tem certeza de que deseja excluir o capítulo selecionado?</item>
        <item quantity="other">Tem certeza de que deseja excluir os capítulos selecionados?</item>
    </plurals>

</resources>
