<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_title_general">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_update_hqs_in_progress"
            android:summary="@string/summary_update_hqs_in_progress"
            android:title="@string/title_update_hqs_in_progress" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/key_category_downloads"
        android:title="@string/pref_title_downloads">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_download_only_wifi"
            android:summary="@string/download_only_wifi"
            android:title="@string/title_download_only_wifi" />

        <Preference
            android:key="@string/key_download_storage_used"
            android:title="@string/title_download_storage_used" />

        <Preference
            android:key="@string/key_download_cache_used"
            android:title="@string/title_download_cache_used" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_check_update_automatic"
            android:summary="@string/check_update_automatic"
            android:title="@string/title_check_update_automatic" />

        <Preference
            android:key="@string/key_update_version"
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_github"
            android:summary="@string/summary_github"
            android:title="@string/title_github">
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>