<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/actionDownloadSelected"
          android:title="@string/action_download"
          android:icon="@drawable/ic_download_white"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/actionDelete"
          android:title="@string/action_delete"
          android:icon="@drawable/ic_delete_white"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/actionSelectAll"
          android:title="@string/action_select_all"
          android:icon="@drawable/ic_select_all_white"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/actionClearAll"
          android:title="@string/action_clear_all"
          android:icon="@drawable/ic_clear_all_white"
          app:showAsAction="ifRoom"/>

</menu>