<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionHome"
        android:enabled="true"
        android:icon="@drawable/ic_home_white"
        android:title="@string/nav_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionRecent"
        android:enabled="true"
        android:icon="@drawable/ic_time_white"
        android:title="@string/nav_recent"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionFavorite"
        android:enabled="true"
        android:icon="@drawable/ic_heart_white"
        android:title="@string/nav_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionDownloads"
        android:enabled="true"
        android:icon="@drawable/ic_download_white"
        android:title="@string/nav_downloads"
        app:showAsAction="ifRoom" />
</menu>