<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="fill_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/margin_default_medium"
                android:layout_marginTop="@dimen/margin_default_medium">

                <TextView
                    android:id="@+id/sourceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/txt_size_medium"
                    android:lines="1"
                    android:ellipsize="end"/>

                <TextView
                    android:id="@+id/sourceUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/txt_size_small"
                    android:lines="1"
                    android:ellipsize="end"
                    android:textStyle="italic"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/languageLogo"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:scaleType="fitCenter"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/margin_default_medium" />

            <Button
                android:id="@+id/goToSiteButton"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textSize="12sp"
                android:paddingLeft="@dimen/margin_default_medium"
                android:paddingRight="@dimen/margin_default_medium"
                android:layout_marginTop="@dimen/margin_default_medium"
                android:textColor="@color/white"
                android:text="@string/acess_website"
                android:layout_alignParentBottom="true"
                android:background="@drawable/button_background_default"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/changeSource"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textSize="@dimen/txt_size_small"
                android:paddingLeft="@dimen/margin_default_medium"
                android:paddingRight="@dimen/margin_default_medium"
                android:textColor="@color/white"
                android:text="@string/change_source"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/button_background_default" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            android:layout_marginTop="@dimen/margin_default_medium"
            android:layout_marginBottom="@dimen/margin_default_medium">

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/publishersListProgress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="@dimen/progress_circular_default_width"
                android:layout_height="@dimen/progress_circular_default_height"
                android:layout_centerHorizontal="true" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/publishersList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/home_list_category_min_height"
                android:clipToPadding="false" />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/lastestComicsTitleContainer"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toStartOf="@id/seeAll"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="@dimen/margin_default_min"
                    android:layout_centerVertical="true">

                    <TextView
                        android:id="@+id/latestTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryText"
                        android:text="@string/lastest_comics_title"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/txt_size_small"
                        android:text="@string/lastest_comics_subtitle"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/seeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorAccent"
                    android:text="@string/see_all"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/lastestListProgress"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="@dimen/progress_circular_default_width"
                    android:layout_height="@dimen/progress_circular_default_height"
                    android:layout_centerHorizontal="true" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/lastestList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/home_list_category_min_height"
                    android:clipToPadding="false" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/popularsComicsTitleContainer"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toStartOf="@id/seeAllPopulars"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="@dimen/margin_default_min"
                    android:layout_centerVertical="true">

                    <TextView
                        android:id="@+id/popularsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryText"
                        android:text="@string/populars_title"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/txt_size_small"
                        android:text="@string/populars_subtitle"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/seeAllPopulars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorAccent"
                    android:text="@string/see_all"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/popularListProgress"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="@dimen/progress_circular_default_width"
                    android:layout_height="@dimen/progress_circular_default_height"
                    android:layout_centerHorizontal="true" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/popularList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/recycler_view_min_height"
                    android:clipToPadding="false" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>